tests/test_func/bad/bad_func.catala_en
## Article

```catala
declaration scope S:
  context f content integer depends on x content integer
  context b content boolean
  context output out content integer

declaration scope R:
  s scope S
  context output r content integer

scope S:
  definition f of x under condition (x >= x) consequence equals x + x
  definition f of x under condition not b consequence equals x * x
  definition b equals false
  definition out equals f of 5

scope R:
  definition s.f of x equals x + x * x
  definition r equals s.out
```

```catala-test-inline
$ catala Interpret -s R
[RESULT] Computation successful! Results:
[RESULT] r = 30
```

```catala-test-inline
$ catala Interpret -s S
[ERROR]
There is a conflict between multiple valid consequences for assigning the same variable.

This consequence has a valid justification:
┌─⯈ tests/test_func/bad/bad_func.catala_en:14.65-14.70:
└──┐
14 │   definition f of x under condition (x >= x) consequence equals x + x
   │                                                                 ‾‾‾‾‾
   └─ Article

This consequence has a valid justification:
┌─⯈ tests/test_func/bad/bad_func.catala_en:15.62-15.67:
└──┐
15 │   definition f of x under condition not b consequence equals x * x
   │                                                              ‾‾‾‾‾
   └─ Article
#return code 123#
```
